--- a/Assets/UI/GameHUD.uxml
+++ b/Assets/UI/GameHUD.uxml
@@ -9,7 +9,7 @@
             <ui:VisualElement style="width: 60%; background-color: rgba(36, 36, 36, 0.59); position: relative; height: 100%; align-self: auto; margin-right: 20px; padding-left: 15px; padding-right: 15px; padding-top: 15px; padding-bottom: 15px; flex-direction: row;">
                 <ui:VisualElement name="EntityThumbnail" style="background-color: rgb(84, 84, 84); width: 20%; height: 100%; margin-right: 15px; background-image: url(&apos;project://database/Packages/com.unity.collab-proxy/Editor/PlasticSCM/Assets/Images/d_iconemptygravatar.png?fileID=2800000&amp;guid=9aebd705574f9e642aef1e5f59b3e4d8&amp;type=3#d_iconemptygravatar&apos;);" />
                 <ui:VisualElement name="EntityInfo" style="background-color: rgb(84, 84, 84); width: 80%; height: 100%; align-items: center; justify-content: center;">
-                    <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); height: 35%; width: 100%; border-bottom-width: 5px; border-left-color: rgb(58, 58, 58); border-right-color: rgb(58, 58, 58); border-top-color: rgb(58, 58, 58); border-bottom-color: rgb(58, 58, 58);">
+                    <ui:VisualElement style="height: 35%; width: 100%; border-bottom-width: 5px; border-left-color: rgb(58, 58, 58); border-right-color: rgb(58, 58, 58); border-top-color: rgb(58, 58, 58); border-bottom-color: rgb(58, 58, 58);">
                         <ui:Label tabindex="-1" text="Label" display-tooltip-when-elided="true" name="EntityName" style="width: 100%; font-size: 40px; -unity-text-align: upper-center; color: rgb(224, 224, 224); -unity-font-style: bold; height: 100%;" />
                     </ui:VisualElement>
                     <ui:VisualElement style="background-color: rgba(0, 0, 0, 0); height: 65%; width: 100%;">
@@ -21,13 +21,43 @@
                 <ui:Button text="Build" display-tooltip-when-elided="true" name="build-button" focusable="false" style="width: 100%; height: 100%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 55px; -unity-font-style: bold;" />
             </ui:VisualElement>
         </ui:VisualElement>
-        <ui:VisualElement name="build-modal" class="blocker" style="flex-grow: 1; background-color: rgba(36, 36, 36, 0.59); position: absolute; width: 20%; height: 50%; align-self: flex-end; top: 25%; padding-left: 20px; padding-right: 20px; padding-top: 20px; padding-bottom: 20px; visibility: visible;">
-            <ui:VisualElement name="build-menu" style="background-color: rgba(36, 36, 36, 0.59); position: relative; padding-left: 15px; padding-right: 15px; padding-top: 15px; padding-bottom: 15px; align-items: stretch; justify-content: space-around; flex-direction: column; flex-wrap: nowrap; height: 100%; width: 100%; visibility: visible;">
-                <ui:Button display-tooltip-when-elided="true" name="build1" focusable="false" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 5px; font-size: 55px; -unity-font-style: bold; overflow: hidden; flex-grow: 1;" />
-                <ui:Button display-tooltip-when-elided="true" name="build2" focusable="false" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 5px; font-size: 55px; -unity-font-style: bold; flex-grow: 1;" />
-                <ui:Button text="Build" display-tooltip-when-elided="true" name="build3" focusable="false" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 5px; font-size: 55px; -unity-font-style: bold; flex-grow: 1; align-self: auto;" />
-                <ui:Button text="Build" display-tooltip-when-elided="true" name="build4" focusable="false" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 5px; font-size: 55px; -unity-font-style: bold; flex-grow: 1;" />
-                <ui:Button text="Build" display-tooltip-when-elided="true" name="build5" focusable="false" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 55px; -unity-font-style: bold; flex-grow: 1;" />
+        <ui:VisualElement name="build-modal" class="blocker" style="background-color: rgba(36, 36, 36, 0.59); position: absolute; width: 20%; align-self: flex-end; top: 20%; padding-left: 20px; padding-right: 20px; padding-top: 20px; padding-bottom: 20px; flex-direction: column; height: 50%;">
+            <ui:VisualElement name="build-menu" style="background-color: rgba(36, 36, 36, 0.59); position: relative; padding-left: 15px; padding-right: 15px; padding-top: 15px; padding-bottom: 15px; flex-direction: column; flex-wrap: nowrap; width: 100%; align-items: stretch; height: 100%;">
+                <ui:VisualElement style="flex-grow: 1; height: 20%; width: 100%; margin-bottom: 15px;">
+                    <ui:Button display-tooltip-when-elided="true" name="build1" focusable="false" text="Build" style="font-size: 55px; -unity-font-style: bold; overflow: visible; height: 100%; width: 100%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0;" />
+                </ui:VisualElement>
+                <ui:VisualElement style="flex-grow: 1; height: 20%; width: 100%; margin-bottom: 15px;">
+                    <ui:Button display-tooltip-when-elided="true" name="build2" focusable="false" text="Build" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 55px; -unity-font-style: bold; height: 100%; overflow: visible;" />
+                </ui:VisualElement>
+                <ui:VisualElement style="flex-grow: 1; height: 20%; width: 100%; margin-bottom: 15px;">
+                    <ui:Button text="Build" display-tooltip-when-elided="true" name="build3" focusable="false" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 55px; -unity-font-style: bold; align-self: auto; height: 100%; overflow: visible;" />
+                </ui:VisualElement>
+                <ui:VisualElement style="flex-grow: 1; height: 20%; width: 100%; margin-bottom: 15px;">
+                    <ui:Button text="Build" display-tooltip-when-elided="true" name="build4" focusable="false" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 55px; -unity-font-style: bold; height: 100%; flex-grow: 1; overflow: visible;" />
+                </ui:VisualElement>
+                <ui:VisualElement style="flex-grow: 1; height: 20%; width: 100%;">
+                    <ui:Button text="Build" display-tooltip-when-elided="true" name="build5" focusable="false" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; font-size: 55px; -unity-font-style: bold; height: 100%; flex-grow: 1; overflow: visible;" />
+                </ui:VisualElement>
+            </ui:VisualElement>
+        </ui:VisualElement>
+        <ui:VisualElement name="confirmation-modal" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.61); width: 100%; height: 100%; justify-content: center; overflow: visible; visibility: hidden;">
+            <ui:VisualElement style="background-color: rgba(36, 36, 36, 0.59); width: 674px; height: 476px; position: absolute; align-self: center; color: rgb(31, 31, 31); padding-left: 20px; padding-right: 20px; padding-top: 20px; padding-bottom: 20px;">
+                <ui:VisualElement style="flex-grow: 1; background-color: rgba(36, 36, 36, 0.59); padding-left: 15px; padding-right: 15px; padding-top: 15px; padding-bottom: 15px;">
+                    <ui:VisualElement style="background-color: rgb(84, 84, 84); height: 20%; width: 100%; border-bottom-width: 5px; border-left-color: rgb(58, 58, 58); border-right-color: rgb(58, 58, 58); border-top-color: rgb(58, 58, 58); border-bottom-color: rgb(58, 58, 58);">
+                        <ui:Label tabindex="-1" text="Confirm?" display-tooltip-when-elided="true" name="confirmation-header" style="width: 100%; font-size: 40px; -unity-text-align: middle-center; color: rgb(224, 224, 224); -unity-font-style: bold; height: 100%;" />
+                    </ui:VisualElement>
+                    <ui:VisualElement style="background-color: rgb(84, 84, 84); height: 65%; width: 100%; border-bottom-width: 5px; border-left-color: rgb(58, 58, 58); border-right-color: rgb(58, 58, 58); border-top-color: rgb(58, 58, 58); border-bottom-color: rgb(58, 58, 58); padding-left: 20px; padding-right: 20px; padding-top: 20px; padding-bottom: 20px;">
+                        <ui:Label tabindex="-1" text="Description for this confirmation action. Will you accept or decline?" display-tooltip-when-elided="true" name="confirmation-description" style="width: 100%; font-size: 32px; -unity-text-align: upper-left; color: rgb(224, 224, 224); -unity-font-style: bold; height: 100%; white-space: normal; text-overflow: clip;" />
+                    </ui:VisualElement>
+                    <ui:VisualElement style="background-color: rgb(84, 84, 84); height: 15%; width: 100%; border-bottom-width: 5px; border-left-color: rgb(58, 58, 58); border-right-color: rgb(58, 58, 58); border-top-color: rgb(58, 58, 58); border-bottom-color: rgb(58, 58, 58); flex-direction: row;">
+                        <ui:VisualElement style="flex-grow: 1; width: 50%; height: 100%;">
+                            <ui:Button text="ACCEPT" display-tooltip-when-elided="true" name="confirmation-accept-button" focusable="false" style="margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; height: 100%; width: 100%; background-color: rgb(32, 255, 0); -unity-font-style: bold; font-size: 36px;" />
+                        </ui:VisualElement>
+                        <ui:VisualElement style="flex-grow: 1; width: 50%; height: 100%;">
+                            <ui:Button text="DECLINE" display-tooltip-when-elided="true" name="confirmation-decline-button" focusable="false" style="width: 100%; height: 100%; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; background-color: rgb(173, 27, 27); -unity-font-style: bold; font-size: 36px;" />
+                        </ui:VisualElement>
+                    </ui:VisualElement>
+                </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
     </HUD_Overlay>
